# world-cup-match-predictor

./: .gitignore  README.md
data-scraper/: LICENSE  README.md  app.py  data_collector.py  export_handler.py  pyproject.toml  replit.md  test_full_scraping.py  test_new_features.py  verify_features.py
data-scraper/attached_assets/: Pasted--A-Team-Performance-Results-1-15-Feature-Description-1-total-matches-played-Total-in-1762523612439_1762523612440.txt
data-scraper/exports/: fifa26_teams_data.csv  fifa26_teams_data.xlsx
data-scraper/scrapers/: elo_scraper.py  fifa_scraper.py  football_data_scraper.py  squad_scraper.py  transfermarkt_scraper.py
finalist-predictor-lightgbm/: .gitignore  README.md
model-serving-classic/: README.md  app.py  data_collection.py  model_trainer.py  models.py  monte_carlo.py  preprocessing.py  pyproject.toml  scheduler.py
model-serving-classic/attached_assets/: Pasted--stage-10-name-Explainability-Diagnostic-Analysis-description-Provide-transpa-1762091501977_1762091501977.txt  Pasted--stage-4-name-Exploratory-Data-Analysis-EDA-description-Perform-detailed-expl-1762091455097_1762091455097.txt  Pasted--stage-5-name-Feature-Engineering-Tournament-Aware-description-Derive-tournam-1762091460849_1762091460849.txt  Pasted--stage-7-name-Anomaly-Integrity-Detection-description-Detect-unusual-or-suspi-1762091477950_1762091477950.txt  (+1 more)
model-serving-classic/models/: xgboost_model.pkl
predict-system-v3/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  replit.md
predict-system-v3/api/: __init__.py  main.py  (+1 more)
(+19 files in other folders)
